--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -15,11 +15,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Xcode
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '16.2'
-        
+    - name: Set Xcode version
+      run: sudo xcode-select -s /Applications/Xcode_16.2.app
+      
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -31,6 +29,13 @@ jobs:
       
     - name: Install dependencies
       run: flutter pub get
+      
+    - name: Clean and reinstall pods
+      run: |
+        cd ios
+        rm -rf Pods Podfile.lock .symlinks Flutter.podspec
+        pod install --repo-update
+        cd ..
       
     - name: Get version from pubspec.yaml
       id: version
