--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -9,14 +9,14 @@ on:
 
 jobs:
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-15
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Set Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_16.0.app
+      run: sudo xcode-select -s /Applications/Xcode_16.3.app
       
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
