add debug steps to list available ios simulators and runtimes

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -18,6 +18,12 @@ jobs:
     - name: Set Xcode version
       run: sudo xcode-select -s /Applications/Xcode_16.3.app
       
+    - name: List all available iOS Simulator runtimes
+      run: xcrun simctl list runtimes
+      
+    - name: List available simulator devices
+      run: xcrun simctl list devices available
+      
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
