--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -50,15 +50,22 @@ jobs:
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "Building version: $VERSION"
       
-    - name: Build iOS (no signing)
+    - name: Build iOS (simulator)
       run: |
-        flutter build ios --release --no-codesign
+        flutter build ios --simulator
         
     - name: Create IPA structure
       run: |
-        mkdir -p Payload
-        cp -r build/ios/iphoneos/Runner.app Payload/
-        zip -r Sangeet-iOS.ipa Payload
+        # Check if Flutter already created an IPA
+        if [ -f "build/ios/iphonesimulator/Runner.app.ipa" ]; then
+          cp build/ios/iphonesimulator/Runner.app.ipa Sangeet-iOS.ipa
+        else
+          # Create IPA manually if needed
+          mkdir -p Payload
+          cp -r build/ios/iphonesimulator/Runner.app Payload/
+          zip -r Sangeet-iOS.ipa Payload
+          rm -rf Payload
+        fi
         
     - name: Upload IPA artifact
       uses: actions/upload-artifact@v4
