--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -21,6 +21,11 @@ jobs:
         flutter-version: '3.35.6'
         channel: 'stable'
         
+    - name: Set Xcode version
+      run: |
+        sudo xcode-select -s /Applications/Xcode_16.3.app
+        xcodebuild -version
+        
     - name: Create .env file
       run: echo "YTM_API_KEY=${{ secrets.YTM_API_KEY }}" > .env
       
