fix podfile - return flutter sdk root directory not executable path

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -51,7 +51,7 @@ jobs:
       
     - name: Build iOS (simulator)
       run: |
-        flutter build ios --simulator
+        flutter build ios --simulator --verbose
         
     - name: Create IPA structure
       run: |
