--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
     <!-- Microphone permission for voice search -->
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     
+    <!-- Required for in-app APK installation -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    
     <application
         android:label="Sangeet"
         android:usesCleartextTraffic="true"
@@ -109,6 +112,16 @@
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+        <!-- FileProvider for sharing downloaded APK with system installer -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.flutter_app.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
