Add battery optimization exemption for uninterrupted background playback - Add REQUEST_IGNORE_BATTERY_OPTIMIZATIONS permission to AndroidManifest.xml - Add Kotlin platform channel handler for battery optimization check/request - Create BatteryOptimizationService (Dart) with Riverpod provider - Show first-launch popup on home screen to enable battery optimization - Add battery optimization status and redirect button in Settings page - Add Dio timeouts to StreamingServer to prevent indefinite hangs - Improve rolling prefetch to download N truly uncached songs ahead

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
     <!-- Required for in-app APK installation -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
     
+    <!-- Battery optimization exemption for uninterrupted background playback -->
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+    
     <application
         android:label="Sangeet"
         android:usesCleartextTraffic="true"
